# chip_8_emulator

./: .gitignore  Cargo.toml  build.rs
src/: audio.rs  main.rs  rendering.rs  virtual_machine.rs
src/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
