[package]
name = "chip_8_emulator"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "chip8"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
rand = "0.8.5"
sdl3 = { version = "0.14.36", features = ["build-from-source-static"] }